--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,15 +13,18 @@
   font-family: 'Overpass', sans-serif;
   scroll-behavior: smooth;
   cursor: none !important;
+  max-width: 100%;
 }
 
 body {
   background-color: #000;
   overflow-x: hidden;
+  max-width: 100vw;
 }
 
 html {
   overflow-x: hidden;
+  max-width: 100vw;
 }
 
 ::-webkit-scrollbar {
